# jupyter-notebooks

./: .gitignore  azure-ai-search.ipynb  pyproject.toml
azure/: azure-ai-search.ipynb
azure/ai-search/: full-text-search.ipynb  vector-search.ipynb
azure/aoai/: assistant_basic.ipynb  chat.ipynb
azure/bing/: bing-search-example.ipynb
crawler/: beautiful-soup.ipynb
fastapi/sse/: main.py
fastapi/sse/static/: fetch.html  index.html
notebooks/azure/ai-search/: full-text-search.ipynb  vector-search.ipynb
notebooks/openai/: function_calling.ipynb
openai/: streaming.ipynb
